# podcast_cuts

./: .gitignore  LICENSE  README.md  api_example.py  check_status.py  cleanup_temp_files.py  client_secret.example copy.json  config.json  config.yaml  generate_outros.py  generate_outros_enhanced.py  input_url.txt  install_imagemagick.py  list_clips.py  main.py  manage_token.py  pyproject.toml  requirements.txt  update_outros.py  upload_clips.py
modules/: config.py  downloader.py  editor.py  facial_detection.py  highlighter.py  llm_utils.py  moviepy_config.py  moviepy_patch.py  outro_appender.py  thumbnail.py  tiktok_uploader.py  transcriber.py  video_optimizer.py  youtube_uploader.py
